make sure user can access permission when rproxy
