# api/handler/rproxy.go
@@ -1,11 +1,15 @@
 package handler
 
 import (
+	"errors"
 	"fmt"
 	"log/slog"
+	"net/http"
+	"strconv"
 	"strings"
 
 	"github.com/gin-gonic/gin"
+	"opencsg.com/csghub-server/api/httpbase"
 	"opencsg.com/csghub-server/builder/proxy"
 	"opencsg.com/csghub-server/common/config"
 	"opencsg.com/csghub-server/component"
@@ -32,30 +36,30 @@ func (r *RProxyHandler) Proxy(ctx *gin.Context) {
 	host := ctx.Request.Host
 	domainParts := strings.SplitN(host, ".", 2)
 	spaceAppName := domainParts[0]
-	// nameParts := strings.Split(spaceAppName, "-")
-	// spaceIDStr := nameParts[len(nameParts)-1]
-	// spaceID, err := strconv.ParseInt(spaceIDStr, 10, 64)
-	// if err != nil {
-	// 	slog.Info("proxy request has invalid space ID", slog.Any("error", err))
-	// 	ctx.Status(http.StatusNotFound)
-	// 	return
-	// }
-	//
-	// username, exists := ctx.Get("currentUser")
-	// if !exists {
-	// 	slog.Info("username not found in gin context")
-	// 	httpbase.BadRequest(ctx, "user not found, please login first")
-	// 	return
-	// }
-	//
-	// allow, err := r.spaceComp.AllowCallApi(ctx, namespace, name, username.(string))
-	// if err != nil {
-	// 	slog.Error("failed to check user permission", "error", err)
-	// 	httpbase.ServerError(ctx, errors.New("failed to check user permission"))
-	// 	return
-	// }
-	//
-	allow := true
+	nameParts := strings.Split(spaceAppName, "-")
+	spaceIDStr := nameParts[len(nameParts)-1]
+	spaceID, err := strconv.ParseInt(spaceIDStr, 10, 64)
+	if err != nil {
+		slog.Info("proxy request has invalid space ID", slog.String("space_id_str", spaceIDStr), slog.Any("error", err))
+		ctx.Status(http.StatusNotFound)
+		return
+	}
+
+	// user verified by cookie
+	username, exists := ctx.Get("currentUser")
+	if !exists {
+		slog.Info("user not found in gin context")
+		httpbase.BadRequest(ctx, "user not found, please login first")
+		return
+	}
+
+	allow, err := r.spaceComp.AllowCallApi(ctx, spaceID, username.(string))
+	if err != nil {
+		slog.Error("failed to check user permission", "error", err)
+		httpbase.ServerError(ctx, errors.New("failed to check user permission"))
+		return
+	}
+
 	if allow {
 		apiname := ctx.Param("api")
 		// slog.Info("proxy space request", slog.String("namespace", namespace),
@@ -65,5 +69,7 @@ func (r *RProxyHandler) Proxy(ctx *gin.Context) {
 		rp.ServeHTTP(ctx.Writer, ctx.Request, apiname)
 	} else {
 		// slog.Info("user not allowed to call sapce api", slog.Any("user_name", username))
+		slog.Info("user not allowed to call sapce api", slog.String("space_id_str", spaceIDStr), slog.Any("user_name", username))
+		ctx.Status(http.StatusNotFound)
 	}
 }
